--- a/templates/Institute/institute.html
+++ b/templates/Institute/institute.html
@@ -12,7 +12,8 @@
     </div>
     {% endfor %}
     {% endif %}
-    {% if INST.student %}
+    {% if Institute %}
+    {% if request.session.type  == "Student" %}
     <div class="row layout-spacing">
         <div class="col-lg-12 col-md-12">
             <div class="card statbox widget box box-shadow">
@@ -30,23 +31,23 @@
                             <tr>
                                 <th>#</th>
                                 <th>Institute</th>
-                                <th>Course</th>
                                 <th>Class</th>
+                                <th>Course</th>
                                 <th>Batch</th>
                                 <th>Total Fees</th>
                                 <th>Payed</th>
                                 <th>Balance</th>
                                 <th class="text-center">View</th>
                             </tr>
-                            {% for batch in batches %}
+                            {% for i in Institute %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
-                                <td>{{batch.institute.user.username}}</td>
-                                <td>{{batch.course.courseName}}</td>
-                                <td>{{batch.forclass}}</td>
-                                <td>{{batch.batchName}}</td>
-                                {%if student.fees.all %}
-                                {% for sf in student.fees.all %}
+                                <td>{{i.institute.user.username}}</td>
+                                <td>{{i.forclass}}</td>
+                                <td>{{i.courseName}}</td>
+                                <td>{{i.batch}}</td>
+                                {% if i.student.fees.all %}
+                                {% for sf in i.student.fees.all %}
                                 <td>{{sf.totalFee}}</td>
                                 <td>{{sf.feePayed}}</td>
                                 <td>{{sf.balanceFee}}</td>
@@ -56,7 +57,7 @@
                                 <td></td>
                                 <td></td>
                                 {% endif %}
-                                <td class="text-center"><a href="{% url 'reviewinstitute' INST.institute.id %}"
+                                <td class="text-center"><a href="{% url 'reviewinstitute' i.institute.id %}"
                                         class="btn btn-info">View</a></td>
                             </tr>
                             {% endfor %}
@@ -73,70 +74,69 @@
             </div>
         </div>
     </div>
-{% elif INST.teacher %}
-<div class="row layout-spacing">
-    <div class="col-lg-12 col-md-12">
-        <div class="card statbox widget box box-shadow">
-            <div class="card-header">
-                <div class="row">
-                    <div class="col-xl-12 col-md-12 col-12">
-                        <h2 style="color:black;">Endrolled Institute</h2>
+    {% elif request.session.type  == "Teacher" %}
+    <div class="row layout-spacing">
+        <div class="col-lg-12 col-md-12">
+            <div class="card statbox widget box box-shadow">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-xl-12 col-md-12 col-12">
+                            <h2 style="color:black;">Endrolled Institute</h2>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="widget-content widget-content-area">
-                <div class="table-responsive">
-                    <table class="testgrid table table-striped table-bordered table-hover mb-4">
-                            <tr>
-                                <th>#</th>
-                                <th>Institute</th>
-                                <th>Course</th>
-                                <th>Class</th>
-                                <th>Batch</th>
-                                <th>TeachType</th>
-                                <th>Availability</th>
-                                <th class="text-center">View</th>
-                            </tr>
-                            {% for batch,course in batches %}
-                            <tr>
-                                <td>{{forloop.counter}}</td>
-                                <td>{{batch.institute.user.username}}</td>
-                                <td>{{course.courseName}}</td>
-                                <td>{{batch.forclass}}</td>
-                                <td>{{course.BatchCourse.get.batchName}}</td>
-                                <td>{{batch.teachType}}</td>
-                                <td>{{batch.availability}}</td>
-                                <td class="text-center"><a href="{% url 'reviewinstitute' INST.institute.id %}"
-                                        class="btn btn-info">View</a></td>
-                            </tr>
-                            {% endfor %}
-                    </table>
-                    <div class="widget-content widget-content-area text-center">
-                        <ul class="pagination pagination-style-1 justify-content-center">
-                            <li><a href="?page=">&laquo;</a></li>
-                            <li><a href="javascript:void(0);" class="active">1</a></li>
-                            <li><a href="?page=">&raquo;</a></li>
-                        </ul>
+                <div class="widget-content widget-content-area">
+                    <div class="table-responsive">
+                        <table class="testgrid table table-striped table-bordered table-hover mb-4">
+                                <tr>
+                                    <th>#</th>
+                                    <th>Institute</th>
+                                    <th>Class</th>
+                                    <th>Course</th>
+                                    <th>TeachType</th>
+                                    <th>Availability</th>
+                                    <th class="text-center">View</th>
+                                </tr>
+                                {% for i in Institute %}
+                                <tr>
+                                    <td>{{forloop.counter}}</td>
+                                    <td>{{i.institute.user.username}}</td>
+                                    <td>{{i.forclass}}</td>
+                                    <td>{{i.courseName}}</td>
+                                    <td>{{i.teachType}}</td>
+                                    <td>{{i.availability}}</td>
+                                    <td class="text-center"><a href="{% url 'reviewinstitute' i.institute.id %}"
+                                            class="btn btn-info">View</a></td>
+                                </tr>
+                                {% endfor %}
+                        </table>
+                        <div class="widget-content widget-content-area text-center">
+                            <ul class="pagination pagination-style-1 justify-content-center">
+                                <li><a href="?page=">&laquo;</a></li>
+                                <li><a href="javascript:void(0);" class="active">1</a></li>
+                                <li><a href="?page=">&raquo;</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    {% endif %}
 
-{% else %}
-<div class="card">
-    <div class="card-header">
-        <div class="row">
-            <div class="col-sm">
-                <h2 style="color: black;">Endrolled Institute</h2>
+    {% else %}
+    <div class="card">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-sm">
+                    <h2 style="color: black;">Endrolled Institute</h2>
+                </div>
             </div>
         </div>
+        <div class="card-body">
+            <h3>No Institute Enrolled</h3>
+        </div>
     </div>
-    <div class="card-body">
-        <h3>Institute Not Found</h3>
-    </div>
-</div>
-{% endif %}
+    {% endif %}
 </div>
 {% endblock main-content %}
