--- a/templates/dashboard/student-dashboard.html
+++ b/templates/dashboard/student-dashboard.html
@@ -49,16 +49,16 @@
       <a href="javascript:void(0);" class="nav-link sidebarCollapse d-inline-block mr-sm-5" data-placement="bottom">
         <i class="flaticon-menu-line-3"></i>
       </a>
-      <a href="{% url 'home' %}" class=""> <img src="{% static 'assets/img/1.png' %}" class="img-fluid" alt="logo"></a>
+      <a href="{% url 'dashboard' %}" class=""> <img src="{% static 'assets/img/1.png' %}" class="img-fluid" alt="logo"></a>
     </div>
-    <ul class="navbar-nav flex-row mr-auto">
+    <!-- <ul class="navbar-nav flex-row mr-auto" style="visibility: hidden;">
       <li class="nav-item d-lg-block d-none">
         <form class="form-inline form-inline search animated-search" role="search">
           <i class="flaticon-search-1 d-lg-none d-block"></i>
           <input type="text" class="form-control search-form-control" placeholder="Search here...">
         </form>
       </li>
-    </ul>
+    </ul> -->
 
     <ul class="navbar-nav flex-row ml-lg-auto">
       <li class="nav-item dropdown message-dropdown ml-lg-4 mr-lg-4 d-sm-block d-none align-self-center">
@@ -135,7 +135,7 @@
               <a href="{% url 'dashboard' %}">
                 <div class="">
                   <i class="flaticon-computer-6"></i>
-                  <span>Dashboard</span>
+                  <span style="max-width: 95px;">Dashboard</span>
                 </div>
               </a>
             </li>
@@ -143,7 +143,7 @@
               <a href="{% url 'EndrolledInstitute' %}">
                 <div class="">
                   <img src="{% static 'assets/img/home.png' %}" alt="">
-                  <span>Institute enrolled</span>
+                  <span style="max-width: 95px;">Institute enrolled</span>
                 </div>
               </a>
             </li>
@@ -152,7 +152,7 @@
               <a href="{% url 'searchCoachingCenter' %}">
                 <div class="">
                   <img src="{% static 'assets/img/home.png' %}" alt="">
-                  <span>Search Institutes</span>
+                  <span style="max-width: 95px;">Search Institutes</span>
                 </div>
               </a>
             </li>
@@ -161,7 +161,7 @@
               <a href="{% url 'enrolledTutors' %}">
                 <div class="">
                   <img src="{% static 'assets/img/tutor.png' %}" alt="">
-                  <span>Search Tutors</span>
+                  <span style="max-width: 95px;">Search Tutors</span>
                 </div>
               </a>
             </li>
@@ -170,7 +170,7 @@
               <a href="{% url 'StudentCalendar' %}">
                 <div class="">
                   <img src="{% static 'assets/img/card-outline.png' %}" alt="">
-                  <span>Calender</span>
+                  <span style="max-width: 95px;">Calender</span>
                 </div>
               </a>
             </li>
@@ -179,7 +179,7 @@
               <a href="{% url 'postAssignment' %}">
                 <div class="">
                   <img src="{% static 'assets/img/teaching-type.png' %}" alt="">
-                  <span>Post Assignment</span>
+                  <span style="max-width: 95px;">Post Assignment</span>
                 </div>
               </a>
             </li>
@@ -188,7 +188,7 @@
               <a href="{% url 'postTution' %}">
                 <div class="">
                   <img src="{% static 'assets/img/student.png' %}" alt="">
-                  <span>Tutors Requirement</span>
+                  <span style="max-width: 95px;">Tutors Requirement</span>
                 </div>
               </a>
             </li>
@@ -197,7 +197,7 @@
               <a href="{% url 'searchcourses' %}" >
                 <div class="">
                   <img src="{% static 'assets/img/tutorials.png' %}" alt="">
-                  <span>Tutorials</span>
+                  <span style="max-width: 95px;">Tutorials</span>
                 </div>
               </a>
             </li>
@@ -206,7 +206,7 @@
               <a href="{% url 'studentexams' %}">
                 <div class="">
                   <img src="{% static 'assets/img/exams.png' %}" alt="">
-                  <span>Exams</span>
+                  <span style="max-width: 95px;">Exams</span>
                 </div>
               </a>
             </li>
@@ -215,7 +215,7 @@
               <a href="{% url 'studentexamresults' %}">
                 <div class="">
                   <img src="{% static 'assets/img/results.png' %}" alt="">
-                  <span>Results</span>
+                  <span style="max-width: 95px;">Results</span>
                 </div>
               </a>
             </li>
@@ -224,7 +224,7 @@
               <a href="{% url 'notesstudents' %}">
                 <div class="">
                   <img src="{% static 'assets/img/notes.png' %}" alt="">
-                  <span>Notes</span>
+                  <span style="max-width: 95px;">Notes</span>
                 </div>
               </a>
             </li>
