--- a/templates/teacher/enrolledTutors.html
+++ b/templates/teacher/enrolledTutors.html
@@ -155,10 +155,12 @@
                                 {% endif %}
                             </div>
                             <div class="d-flex justify-content-center row my-2">
-                                <a href="{% url 'stuMakeAppointment' i.id %}"><button class="btn btn-sm btn-info" type="button" style="font-size:smaller;">Schedule Class</button>
-                                <a class="mt-2 btn btn-success" style="width: 65%;" href='{% url "room" request.user.username "Student" i.username %}'>Chat</a>
-                            </div>
+                                <a href="{% url 'stuMakeAppointment' i.id %}"><button class="btn btn-sm btn-info" type="button" style="font-size:smaller; width: 130px;">Schedule Class</button>
+                                </div>
+                                <div class="d-flex justify-content-center row my-2">
+                                <a class="mt-2 btn btn-success" style="font-size:smaller; width: 130px;" href='{% url "room" request.user.username "Student" i.username %}'>Chat</a>
                         </div>
+                    </div>
                         <div class="col-sm-9 col-12">
                             <div class="row">
                                 <div class="col-sm-6 col-12">
