--- a/templates/dashboard/Tutor-dashboard.html
+++ b/templates/dashboard/Tutor-dashboard.html
@@ -164,8 +164,8 @@
             <li class="menu">
               <a href="{% url 'teacherCalendar' %}">
                 <div class="">
-                  <img src="{% static 'assets/img/card-outline.png' %}" alt="">
-                  <span style="max-width: 95px;">Calender</span>
+                  <img src="{% static 'assets/img/cal.png' %}" alt="">
+                  <span style="max-width: 95px;">Schedule</span>
                 </div>
               </a>
             </li>
