--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -260,8 +260,8 @@
             <li class="menu">
               <a href="{% url 'instCalendar' %}">
                 <div class="">
-                  <img src="{% static 'assets/img/card-outline.png' %}" alt="">
-                  <span style="max-width: 95px;">Calender</span>
+                  <img src="{% static 'assets/img/cal.png' %}" alt="">
+                  <span style="max-width: 95px;">Schedule</span>
 
                 </div>
               </a>
