--- a/templates/dashboard/student-dashboard.html
+++ b/templates/dashboard/student-dashboard.html
@@ -169,8 +169,8 @@
             <li class="menu">
               <a href="{% url 'StudentCalendar' %}">
                 <div class="">
-                  <img src="{% static 'assets/img/card-outline.png' %}" alt="">
-                  <span style="max-width: 95px;">Calender</span>
+                  <img src="{% static 'assets/img/cal.png' %}" alt="">
+                  <span style="max-width: 95px;">Schedule</span>
                 </div>
               </a>
             </li>
