--- a/templates/teacher/viewAssignmentTutor.html
+++ b/templates/teacher/viewAssignmentTutor.html
@@ -10,7 +10,18 @@
 
 {% endblock extra-stylesheets %}
 {% block main-content %}
-<div class="mt-5 row">
+<div class="mt-5">
+  {% if messages %}
+    {% for k in messages%}
+    <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+        <b>{{ k }} !</b>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    <div class="row">
   <div class="col-lg-12 mb-4">
     <div class="card statbox widget box box-shadow">
       <div class="card-header border-bottom border-default">
@@ -75,6 +86,7 @@
     </div>
   </div>
 </div>
+</div>
 
 {% if allData %}
 <div class="row">
@@ -118,6 +130,7 @@
                               <div class="col-xl-12 text-center mt-2 mb-2 card-bottom-section">
                                   <a href="{{assing.descriptionFile.url}}" class="btn btn-info" target="_blank" class="btn btn-primary">View</a>
                                   <a class="btn btn-success" href='{% url "room" request.user.username "Teacher" assing.student.user.username %}'>Chat</a>
+                                  <a href="{% url 'assign' assing.pk %}" class="btn btn-primary">Assign</a>
                               </div>
                           </div>
                       </div>
